tests/snapshots/cli__check_healthy_fixture.snap
---
source: tests/cli.rs
expression: out
---
checkpoint-studio check: [FIXTURE]
  1 file(s) · 7 tensors · 124 params
  ✓ Byte-range integrity  — safetensors spans contiguous, sized correctly, no truncation
  ⊘ Layer completeness    — n/a for this checkpoint
  ✓ Shape / dtype sanity  — no duplicate names, no empty tensors, dtypes defined and uniform within each role
  ✓ Header consistency    — data 8-byte aligned, index total right, no tensor in two shards, metadata text
  ⊘ Config consistency    — n/a for this checkpoint
  ⊘ Files & sharding      — n/a for this checkpoint
  ⊘ S3 object metadata    — n/a for this checkpoint
  · Value scan            — skipped (pass --values to scan tensor data)
  OK — no metadata issues found
