tests/snapshots/cli__check_json_healthy.snap
---
source: tests/cli.rs
expression: out
---
{
  "checkpoint": "[FIXTURE]",
  "format": "safetensors",
  "summary": {
    "files": 1,
    "tensors": 7,
    "params": 124,
    "errors": 0,
    "warnings": 0
  },
  "values": false,
  "checks": [
    {
      "id": "byte_ranges",
      "title": "Byte-range integrity",
      "note": "safetensors spans contiguous, sized correctly, no truncation",
      "status": "pass",
      "findings": []
    },
    {
      "id": "layers",
      "title": "Layer completeness",
      "note": "layer indices contiguous, tensor set uniform across layers",
      "status": "na",
      "findings": []
    },
    {
      "id": "shapes_dtypes",
      "title": "Shape / dtype sanity",
      "note": "no duplicate names, no empty tensors, dtype uniform within each role",
      "status": "pass",
      "findings": []
    },
    {
      "id": "config",
      "title": "Config consistency",
      "note": "tensor tree matches config.json",
      "status": "na",
      "findings": []
    },
    {
      "id": "files",
      "title": "Files & sharding",
      "note": "index matches files on disk, shard numbering complete",
      "status": "na",
      "findings": []
    }
  ],
  "healthy": true,
  "exit_code": 0
}
