tests/snapshots/cli__check_sarif_healthy.snap
---
source: tests/cli.rs
expression: out
---
{
  "version": "2.1.0",
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "checkpoint-studio",
          "version": "[VERSION]",
          "informationUri": "https://github.com/antont-cerebras/checkpoint-studio",
          "rules": [
            {
              "id": "byte_ranges",
              "name": "Byte-range integrity",
              "shortDescription": {
                "text": "safetensors spans contiguous, sized correctly, no truncation"
              }
            },
            {
              "id": "layers",
              "name": "Layer completeness",
              "shortDescription": {
                "text": "layer indices contiguous, tensor set uniform across layers"
              }
            },
            {
              "id": "shapes_dtypes",
              "name": "Shape / dtype sanity",
              "shortDescription": {
                "text": "no duplicate names, no empty tensors, dtype uniform within each role"
              }
            },
            {
              "id": "config",
              "name": "Config consistency",
              "shortDescription": {
                "text": "tensor tree matches config.json"
              }
            },
            {
              "id": "files",
              "name": "Files & sharding",
              "shortDescription": {
                "text": "index matches files on disk, shard numbering complete"
              }
            }
          ]
        }
      },
      "results": []
    }
  ]
}
