tests/snapshots/cli__plain_tree_expanded.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tree-state\", \"expanded\"])"
---
Checkpoint Studio - [FIXTURE] (1/1)                                                            [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▾ [FIXTURE] (▦ 7, 124 params, 272 B)
  ▾ 🔧 Metadata (▦ 0, 0 B)
    † format [string]: pt
  · lm_head.weight [I32, (2, 4), 32 B]
  ▾ model (▦ 6, 240 B)
    · embed_tokens.weight [F16, (6, 4), 48 B]
    ▾ layers.0 (▦ 3, 168 B)
      · input_layernorm.weight [F32, (4), 16 B]
      · mlp.down_proj.weight [U16, (3, 4, 5), 120 B]
      · self_attn.q_proj.weight [BF16, (4, 4), 32 B]
    · norm.weight [F32, (4), 16 B]
    · scale.u8 [U8, (8), 8 B]





















↑/↓ navigate · ←/→ parent/child · Shift+↑/↓ sibling · PgUp/PgDn page · Enter open · Tab files · Space/: commands
e expand/collapse all · / search · l legend · h health · s stats · d compare · k compact · o/O sort/reverse
c copy screen · t copy tree · f copy file · n copy name · y copy command · ⌫/\ back/fwd · R rename · q quit
 ▸ tests/fixtures
                                                                                                               editable
