tests/snapshots/cli__stats_popup.snap
---
source: tests/cli.rs
expression: "plain(&[\"--stats\"])"
---
 Checkpoint stats                                                                                                    [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Overview
  Parameters   124
  Size         272 B

▤ Files  ×1 safetensors
  Largest      272 B     [FIXTURE]
  Smallest     272 B     [FIXTURE]
  Average      272 B
  Median       272 B

▦ Tensors  ×7
  Largest      120 B     model.layers.0.mlp.down_proj.weight
  Smallest     8 B       model.scale.u8
  Average      38 B
  Median       32 B

≡ Layers  ×1
  Params       80 each · 80 total
  Size         168 B each · 168 B total

Per-layer profile
  Size/layer     uniform · 168 B each

  Params/layer   uniform · 80 each

  Tensors/layer  uniform · 3 each

  Composition    ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░░░   █ attention 19% · ▓ ffn/experts 71% · ░ other 10%

By dtype
  U16     120 B  1 tensor
  F16      48 B  1 tensor
  BF16     32 B  1 tensor
  F32      32 B  2 tensors
  I32      32 B  1 tensor
↑↓ PgUp/PgDn scroll · 1–35 of 53
↑/↓ scroll · PgUp/PgDn page · r copy report · c copy screen · y copy command · l legend · ⌫ back · q quit
